--- a/properties/exercise3.html
+++ b/properties/exercise3.html
@@ -2,23 +2,42 @@
 <html>
 <head>
     <title>Exercise #3: Styling source code</title>
+    <style>
+          pre {
+            font-family: 'Consolas' , 'Menlo' , 'Monaco' , 'Courier New' , 'monospace';
+            font-weight:bold;
+        }
+        a:link {
+            text-decoration:none;
+            color:#0033cc;
+        }
+        a:hover { 
+            text-decoration:underline;
+            color:#0033cc;
+            
+
+        }
+        span{
+            color:#009933;
+        }
+    </style>
 </head>
 <body>
 
 <p>Code snippet 1:</p>
 <pre>
-h1 {
-    font-family: Verdana;
-    font-size: 1.2em;
+h1  {
+    <a href="https://www.w3schools.com/">font-family</a> : <span>Verdana</span>;
+    <a href="https://www.w3schools.com/">font-size</a> : <span>1.2em</span>;
 }
 </pre>
 
 <p>Code snippet 2:</p>
 <pre>
 p {
-    font-family: Arial;
-    color: blue;
-    text-align: right;
+    <a href="https://www.w3schools.com/">font-family</a> : <span>Arial</span>;
+    <a href="https://www.w3schools.com/">color</a> : <span>blue</span>;
+    <a href="https://www.w3schools.com/">text-align</a> : <span>right</span>;
 }
 </pre>
 
