--- a/selectors/exercise4.html
+++ b/selectors/exercise4.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Exercise #4: Selectors</title>
-    <link rel="stylesheet" href="exercise4.css"/>
+    <link rel="stylesheet" type="text/css" href="style4.css"/>
 </head>
 <body>
 <div>
