--- a/selectors/exercise1b.html
+++ b/selectors/exercise1b.html
@@ -7,7 +7,7 @@
        
         body {
             background-color:#f0f8ff
-             }
+        }
         div {
             width:75%;
             min-width: 500px;
@@ -15,13 +15,14 @@
             margin-bottom: 1em;
             padding:0.5em;
             background-color:white;
-            }
+            box-shadow: 2px 2px 2px;
+            border-radius: 10px;
+        }
         span {
             font-weight: bold;
-            padding: 0em  0.5em ;
-            }
+            padding: 0 0.5em 0 0.5em;
+        }
     </style>
-</head>
 <body>
 
 <h1>News</h1>
