--- a/positioning/exercise3.html
+++ b/positioning/exercise3.html
@@ -7,7 +7,27 @@
             background-color: #cccccc;
         }
 
-        /* add CSS here*/
+       
+        article {
+            width: 200px;
+            height: 100px;
+            float: left;
+            margin: 5px;
+            overflow: hidden;
+            background-color:#eaeaed;
+        }
+
+        .promo {
+            background-color: inherit;
+            font-weight: bold;
+            width: 100%;
+            height: 50px;
+            clear: both;
+            float: none;
+            border-top: 1px solid red;
+            border-bottom: 1px solid red;
+        
+                }
     </style>
 </head>
 <body>
